--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,6 +157,10 @@
             android:name="com.maf.base.activity.BillingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.maf.base.activity.XPosedActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <!-- 视频播放插件必须初始化 -->
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
@@ -225,6 +229,22 @@
 
         </service>
         <!-- end:::测试插入短信共能，5.0以后的版本，需要将应用设为默认短信应用 -->
+        <!-- start::: xposed -->
+        <!-- 作为xposed模块 -->
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+
+        <!-- 模块描述 -->
+        <meta-data
+            android:name="xposeddescription"
+            android:value="zgmao_xposed" />
+
+        <!-- XposedBridgeApi的最低版本号 -->
+        <meta-data
+            android:name="xposedminversion"
+            android:value="82" />
+        <!-- end::: xposed -->
     </application>
 
 </manifest>
