--- a/maf/build.gradle
+++ b/maf/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile files('libs/zxing-3.2.1.jar')
     compile files('libs/droidText.0.5.jar')
     compile files('libs/XposedBridgeApi-82.jar')
