--- a/vitamio/build.gradle
+++ b/vitamio/build.gradle
@@ -11,6 +11,9 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
     }
+    lintOptions {
+        abortOnError false
+    }
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
