--- a/maf/build.gradle
+++ b/maf/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 19
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -27,9 +27,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:design:23.2.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/mpandroidchartlibrary-2-2-4.jar')
@@ -37,11 +34,14 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
-    compile 'com.android.support:multidex:1.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile files('libs/zxing-3.2.1.jar')
     compile files('libs/droidText.0.5.jar')
     compile files('libs/XposedBridgeApi-82.jar')
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
 }
