--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -214,7 +214,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             />
-
+        <activity
+            android:name="com.maf.base.activity.GroupSendActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <!-- 视频播放插件必须初始化 -->
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
@@ -312,12 +316,14 @@
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="maf.com.mafproject.fileProvider"
+            android:exported="false"
             android:grantUriPermissions="true"
-            android:exported="false">
+            >
             <!--元数据-->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_path" />
+                android:resource="@xml/file_path"
+                />
         </provider>
     </application>
 
