--- a/IdcardScan/build.gradle
+++ b/IdcardScan/build.gradle
@@ -21,7 +21,7 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['src/main/jniLibs']
+            jniLibs.srcDirs = ['libs']
         }
     }
     lintOptions {
