--- a/maf/build.gradle
+++ b/maf/build.gradle
@@ -5,11 +5,14 @@ android {
     buildToolsVersion '26.0.1'
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     buildTypes {
         release {
