--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "maf.com.mafproject"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,9 @@ android {
             ldLibs "log"
             abiFilters "armeabi", "armeabi-v7a", "x86_64"
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     //配置keystore签名+
     signingConfigs {
